--- a/Models/Vocoder/2024.02.09_GLA-Grad.md
+++ b/Models/Vocoder/2024.02.09_GLA-Grad.md
@@ -23,6 +23,8 @@
 
 ## Abstract: 摘要
 
+<table><tr><td width="50%">
+
 Diffusion models are receiving a growing interest for a variety of signal generation tasks such as speech or music synthesis.
 WaveGrad, for example, is a successful diffusion model that conditionally uses the mel spectrogram to guide a diffusion process for the generation of high-fidelity audio.
 However, such models face important challenges concerning the noise diffusion process for training and inference, and they have difficulty generating high-quality speech for speakers that were not seen during training.
@@ -30,14 +32,54 @@ With the aim of minimizing the conditioning error and increasing the efficiency 
 Furthermore, it can be directly applied to an already-trained waveform generation model, without additional training or fine-tuning.
 We show that our algorithm outperforms state-of-the-art diffusion models for speech generation, especially when generating speech for a previously unseen target speaker.
 
+</td><td>
+
+</td></tr></table>
+
 ## 1·Introduction: 引言
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
