--- a/Models/Vocoder/2024.06.04_BiVocoder.md
+++ b/Models/Vocoder/2024.06.04_BiVocoder.md
@@ -22,20 +22,62 @@
 
 ## Abstract: 摘要
 
+<table><tr><td width="50%">
+
 This paper proposes a novel bidirectional neural vocoder, named BiVocoder, capable both of feature extraction and reverse waveform generation within the short-time Fourier transform (STFT) domain.
 For feature extraction, the BiVocoder takes amplitude and phase spectra derived from STFT as inputs, transforms them into long-frame-shift and low-dimensional features through convolutional neural networks.
 The extracted features are demonstrated suitable for direct prediction by acoustic models, supporting its application in text-to-speech (TTS) task.
 For waveform generation, the BiVocoder restores amplitude and phase spectra from the features by a symmetric network, followed by inverse STFT to reconstruct the speech waveform.
 Experimental results show that our proposed BiVocoder achieves better performance compared to some baseline vocoders, by comprehensively considering both synthesized speech quality and inference speed for both analysis-synthesis and TTS tasks.
 
+</td><td>
+
+</td></tr></table>
+
 ## 1·Introduction: 引言
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
