--- a/Models/Vocoder/2024.06.10_JenGAN.md
+++ b/Models/Vocoder/2024.06.10_JenGAN.md
@@ -21,20 +21,62 @@
 
 ## Abstract: 摘要
 
+<table><tr><td width="50%">
+
 Non-autoregressive GAN-based neural vocoders are widely used due to their fast inference speed and high perceptual quality.
 However, they often suffer from audible artifacts such as tonal artifacts in their generated results.
 Therefore, we propose JenGAN, a new training strategy that involves stacking shifted low-pass filters to ensure the shift-equivariant property.
 This method helps prevent aliasing and reduce artifacts while preserving the model structure used during inference.
 In our experimental evaluation, JenGAN consistently enhances the performance of vocoder models, yielding significantly superior scores across the majority of evaluation metrics.
 
-## 1.Introduction: 引言
+</td><td>
 
-## 2.Related Works: 相关工作
+</td></tr></table>
 
-## 3.Methodology: 方法
+## 1·Introduction: 引言
 
-## 4.Experiments: 实验
+<table><tr><td width="50%">
 
-## 5.Results: 结果
+</td><td>
 
-## 6.Conclusions: 结论
+</td></tr></table>
+
+## 2·Related Works: 相关工作
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
+## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
+## 4·Experiments: 实验
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
+## 5·Results: 结果
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
+## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
