--- a/Models/Vocoder/2024.07.05_FA-GAN.md
+++ b/Models/Vocoder/2024.07.05_FA-GAN.md
@@ -21,8 +21,7 @@
 
 ## Abstract: 摘要
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 Generative adversarial network (GAN) based vocoders have achieved significant attention in speech synthesis with high quality and fast inference speed.
 However, there still exist many noticeable spectral artifacts, resulting in the quality decline of synthesized speech.
@@ -31,8 +30,7 @@ To suppress the aliasing artifacts caused by non-ideal upsampling layers in high
 To alleviate blurring artifacts and enrich the reconstruction of spectral details, we propose a novel fine-grained multi-resolution real and imaginary loss to assist in the modeling of phase information.
 Experimental results reveal that ***FA-GAN*** outperforms the compared approaches in promoting audio quality and alleviating spectral artifacts, and exhibits superior performance when applied to unseen speaker scenarios.
 
-</details>
-<br>
+</td><td>
 
 基于生成对抗网络 (GAN) 的声码器在语音合成中因其高质量和快速推理速度而获得了显著的关注.
 然而, 仍然存在许多明显的频谱伪影, 导致合成语音质量的下降.
@@ -41,14 +39,52 @@ Experimental results reveal that ***FA-GAN*** outperforms the compared approache
 为了减轻模糊伪影并丰富频谱细节的重建, 我们提出了一种新颖的细粒度多分辨率实部和虚部损失, 以辅助相位信息的建模.
 实验结果表明, ***FA-GAN*** 在提升音频质量和减轻频谱伪影方面优于比较的方法, 并且在应用于未见过的说话人场景时表现出优越的性能.
 
+</td></tr></table>
+
 ## 1·Introduction: 引言
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
